Fix image stretching

--- a/lesson07/styles/lazyload.css
+++ b/lesson07/styles/lazyload.css
@@ -45,6 +45,7 @@ picture {
 
 img {
     width: 100%;
+    height: fit-content;
     background: black;
     animation: fade 10s;
     display: block;
